рефакторинг OptimizeDispatcherService.java